# data_modeling_course

./: .gitignore  README.md  pyproject.toml
00_course_intro/: README.md
01_course_structure/: README.md
02_database_types/: README.md
03_erd_conceptual_model/: README.md
04_erd_logical_physical_model/: README.md  ezecream_physical_model.dbml
05_setup_postgres/: README.md  docker-compose.yaml  eda.myh.ipynb  ezecream_table_setup.sql
05_setup_postgres/sql/: ddl_dml_test.sql  ezecream_table_setup.psql
06_database_keys/: README.md
06_primary_foreign_keys/: README.md
07_normalization/: README.md
08_mongodb/: README.md  connect_mongodb.py  docker-compose.yaml  insert_profile_data.py  query_data.ipynb
09_security/: README.md
exercises/: exercise0.md  exercise1.md  exercise2.md
